force-app/main/default/objects/Idle_Time_Report__c/Idle_Time_Report__c.object-meta.xml
<CustomObject>
    <label>Idle Time Report</label>
    <nameField>
        <displayFormat>ITR - {000000}</displayFormat>
        <label>Idle Time Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idle Time Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>