force-app/main/default/objects/Idle_Time_Report__c/fields/BDA__c.field-meta.xml
<CustomField>
    <fullName>BDA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Idle_Time_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>