force-app/main/default/objects/Idle_Time_Report__c/fields/Daily_Idle_View__c.field-meta.xml
<CustomField>
    <fullName>Daily_Idle_View__c</fullName>
    <label>Daily Idle View</label>
    <referenceTo>Daily_Idle_View__c</referenceTo>
    <relationshipLabel>Idle Time Reports</relationshipLabel>
    <relationshipName>Idle_Time_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>