force-app/main/default/objects/Idle_Time_Report__c/fields/Idle_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Idle_End_Time__c</fullName>
    <label>Idle End Time</label>
    <type>DateTime</type>
</CustomField>