force-app/main/default/objects/Idle_Time_Report__c/fields/Idle_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Idle_Start_Time__c</fullName>
    <label>Idle Start Time</label>
    <type>DateTime</type>
</CustomField>