force-app/main/default/objects/Idle_Time_Report__c/fields/Total_Idle_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Idle_Time__c</fullName>
    <label>Total Idle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>