force-app/main/default/objects/Idle_Time_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDA__c</columns>
    <columns>Idle_Start_Time__c</columns>
    <columns>Idle_End_Time__c</columns>
    <columns>Total_Idle_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BDA__c</field>
        <operation>contains</operation>
        <value>ashutosh</value>
    </filters>
    <label>All</label>
</ListView>